fix spacing in the about section

--- a/css/style.css
+++ b/css/style.css
@@ -199,17 +199,20 @@ body {
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
 
-.row {
+.main-content {
   display: flex;
-  max-width: 114rem;
-  justify-content: space-around; }
-  .row:not(:last-child) {
-    margin-bottom: 8rem; }
-  .row .column {
-    flex: 0 1 100%;
-    padding: 2rem; }
-    .row .column:not(:last-child) {
-      margin-right: 6rem; }
+  justify-content: center; }
+  .main-content .row {
+    display: flex;
+    max-width: 114rem;
+    justify-content: space-between; }
+    .main-content .row:not(:last-child) {
+      margin-bottom: 8rem; }
+    .main-content .row .column {
+      flex: 1 1 100%;
+      padding: 2rem; }
+      .main-content .row .column:not(:last-child) {
+        margin-right: 6rem; }
 
 .header {
   height: 95vh;
@@ -235,3 +238,17 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh; }
+  .section-about .main-content {
+    display: flex;
+    justify-content: center; }
+    .section-about .main-content .row {
+      display: flex;
+      max-width: 114rem;
+      justify-content: space-between; }
+      .section-about .main-content .row:not(:last-child) {
+        margin-bottom: 8rem; }
+      .section-about .main-content .row .column {
+        flex: 1 1 100%;
+        padding: 2rem; }
+        .section-about .main-content .row .column:not(:last-child) {
+          margin-right: 6rem; }
